--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ inc/
 .gitignore
 /boilerplate/package/XX_Module.pm
 /boilerplate/legacy/XX_Module.pm
+/boilerplate/cpan/XX_Module.pm
+/boilerplate/cpan/Package.pm
